2009-08-28  Lluis Sanchez Gual  <lluis@novell.com>

	* WindowsPlatform.cs: Add a default implementation of
	  GetMimeTypeDescription.

2009-05-07  Lluis Sanchez Gual  <lluis@novell.com>

	* WindowsPlatform.cs: Don't crash if icon for a file can't be
	  found.

	* Win32.cs: Some win32 api.

2009-05-04  Lluis Sanchez Gual  <lluis@novell.com>

	* WindowsPlatform.cs:
	* WindowsPlatform.csproj: Implemented mime type and file icon
	  support.

2009-04-21  Lluis Sanchez Gual  <lluis@novell.com>

	* WindowsPlatform.cs: New overrides.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* WindowsPlatform.addin.xml: Bump MD version.

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* WindowsPlatform.csproj: Flush.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* WindowsPlatform.csproj: Remove more inadvertent local
	  copying of references.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* WindowsPlatform.csproj: Add project file for WindowsPlatform
	  addin.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Make it work for parallel build.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
	the addin manifests.

2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fix build dependencies.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* WindowsPlatform.addin.xml: Bump MD version.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* WindowsPlatform.addin.xml: Bump MD version.

2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 

	* WindowsPlatform.cs: Track api changes.

2008-03-11  Jonathan Pobst  <monkey@jpobst.com>

	* WindowsPlatform.cs: Initial version.